edit html and css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 
 <body>
-  <a href="#main-content" class="skip-link">Skip to main content</a>
+  <ul class="skip-link">
+    <li><a href="#main-content">Skip to main content</a></li>
+  </ul>
 
   <header itemscope itemtype="https://schema.org/WPHeader" role="banner" class="site-header">
     <h1>Jam Box Studios</h1>
@@ -74,7 +76,7 @@
   </main>
   
   <footer itemscope itemtype="https://schema.org/WPFooter" role="contentinfo" class="site-footer">
-    &copy; 2024 Jam Box Studios
+    &copy; 2024 Jam Box Studios <a href="#top">Back to Top</a>
   </footer>
 </body>
 
