--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <li><a href="#main-content">Skip to main content</a></li>
   </ul>
 
-  <header itemscope itemtype="https://schema.org/WPHeader" role="banner" class="site-header">
+  <header itemscope itemtype="https://schema.org/WPHeader" role="banner" class="container">
     <h1>Jam Box Studios</h1>
     <nav itemscope itemtype="https://schema.org/SiteNavigationElement" role="navigation" class="main-nav">
       <ul>
